@@ -5,6 +5,9 @@
 # $Id$
 #
 # $Log$
+# Revision 1.13  2004/05/20 20:47:19  jimmyo
+# The server programs now open the log file at an earlier point.
+#
 # Revision 1.12  2004/05/20 11:14:17  jimmyo
 # Tuned cdef-code to make it work properly after clean-up.
 #
@@ -113,6 +116,8 @@ my $list_images = 0;
 my $conffile = "@@CONFDIR@@/munin.conf";
 my %draw = ("day" => 1, "week" => 1, "month" => 1, "year" => 1);
 
+my $log = new IO::Handle;
+
 # Get options
 $do_usage=1  unless 
 GetOptions ( "force!"       => \$force_graphing,
@@ -181,7 +186,6 @@ my $config= &munin_config ($conffile);
 
 
 munin_runlock("$config->{rundir}/munin-graph.lock");
-open LOG,">>$config->{logdir}/munin-graph.log";
 open (STATS,">$config->{dbdir}/munin-graph.stats.tmp") or logger("Unable to open $config->{dbdir}/munin-graph.stats.tmp");
 logger("Starting munin-graph");
 
@@ -220,7 +224,7 @@ logger("Munin-graph finished ($graph_time sec)");
 print STATS "GT|total|$graph_time\n";
 rename ("$config->{dbdir}/munin-graph.stats.tmp", "$config->{dbdir}/munin-graph.stats");
 close STATS;
-close LOG;
+close $log;
 
 sub process_domain {
     my ($domain) = @_;
@@ -1010,11 +1014,45 @@ sub expand_cdef
     return ($max, $min, $avg);
 }
 
+sub logger_open {
+    my $dirname = shift;
+
+    if (!$log->opened)
+    {
+	  unless (open ($log, ">>$dirname/munin-html.log"))
+	  {
+		  print STDERR "Warning: Could not open log file \"$dirname/munin-html.log\" for writing: $!";
+	  }
+    }
+}
+
 sub logger {
   my ($comment) = @_;
   my $now = strftime "%b %d %H:%M:%S", localtime;
-  print LOG "$now - $comment\n";
-  flush LOG;
+
+  if ($log->opened)
+  {
+	  print $log "$now - $comment";
+  }
+  else
+  {
+	  if (defined $config->{logdir})
+	  {
+		  if (open ($log, ">>$config->{logdir}/munin-graph.log"))
+		  {
+			  print $log "$now - $comment";
+		  }
+		  else
+		  {
+			  print STDERR "Warning: Could not open log file \"$config->{logdir}/munin-graph.log\" for writing: $!";
+			  print STDERR "$now - $comment";
+		  }
+	  }
+	  else
+	  {
+		  print STDERR "$now - $comment";
+	  }
+    }
 }
 
 sub parse_path
