@@ -4,6 +4,9 @@
 # $Id$
 #
 # $Log$
+# Revision 1.5  2004/05/20 20:47:20  jimmyo
+# The server programs now open the log file at an earlier point.
+#
 # Revision 1.4  2004/01/29 17:40:10  jimmyo
 # Fixed pod typos patched by Lupe Christoph (SF#884092)
 #
@@ -67,6 +70,8 @@ my $force_root = 0;
 my $removeok = 0;
 my $do_version = 0;
 
+my $log = new IO::Handle;
+
 # Get options
 $do_usage=1  unless 
 GetOptions ( "force!"       => \$force_sendmsg,
@@ -124,7 +129,6 @@ it as the user \"munin\". Aborting.\n\n";
 my $config = &munin_config ($conffile);
 my $modified=0;
 
-open LOG,">>$config->{logdir}/munin-nagios.log" or die "Unable to create/access $config->{logdir}/munin-nagios.log\n";
 logger("Starting munin-nagios, checking lock");
 munin_runlock("$config->{rundir}/munin-nagios.lock");
 logger("Created lock: $config->{rundir}/munin-nagios.lock");
@@ -311,13 +315,48 @@ sub process_service {
   }
 }
 
+sub logger_open {
+    my $dirname = shift;
+
+    if (!$log->opened)
+    {
+	  unless (open ($log, ">>$dirname/munin-html.log"))
+	  {
+		  print STDERR "Warning: Could not open log file \"$dirname/munin-html.log\" for writing: $!";
+	  }
+    }
+}
+
 sub logger {
   my ($comment) = @_;
   my $now = strftime "%b %d %H:%M:%S", localtime;
-  print LOG "$now - $comment\n";
+
+  if ($log->opened)
+  {
+	  print $log "$now - $comment\n";
+  }
+  else
+  {
+	  if (defined $config->{logdir})
+	  {
+		  if (open ($log, ">>$config->{logdir}/munin-nagios.log"))
+		  {
+			  print $log "$now - $comment\n";
+		  }
+		  else
+		  {
+			  print STDERR "Warning: Could not open log file \"$config->{logdir}/munin-nagios.log\" for writing: $!";
+			  print STDERR "$now - $comment\n";
+		  }
+	  }
+	  else
+	  {
+		  print STDERR "$now - $comment\n";
+	  }
+    }
 }
 
-close LOG;
+close $log;
 
 =head1 NAME
 
