@@ -1,3 +1,7 @@
+munin (1.1.2)
+
+  * The server programs now open the log file at an earlier point.
+
 munin (1.1.1)
 
   * Added a table in the service view page, with information about each 
